# bza-project

./: .gitignore  .gitmodules  Makefile  README.md  README.submission.md  pyproject-cuda.toml  pyproject-rocm.toml  pyproject.toml  requirements.txt
bza_tool/: __init__.py  __main__.py  cli.py  download.py  edit.py  evaluate.py  pipeline.py  quantize.py  rome_edit.py  run.py  utils.py
docs/: IEEE-conference-template-062824.tex  draft.md  notes.md
notebooks/: results.ipynb
presentation/: presentation.md
res/hparams/AlphaEdit/: gpt-j-6B.yaml  gpt-j-6b.yaml  gpt2-xl.yaml  llama3-8b.yaml  llama3.1-8b.yaml  qwen2.5-7b.yaml
res/hparams/EMMET/: gpt-j-6B.yaml  gpt2-xl.yaml  llama-7b.yaml  llama3.2-3b.yaml
res/hparams/MEMIT/: baichuan-7b.yaml  chatglm2-6b.yaml  gpt-j-6B.yaml  gpt2-xl.yaml  internlm-7b.yaml  llama-7b.yaml  llama3.2-3b.yaml  mistral-7b.yaml  qwen-7b.yaml  qwen2-7b.yaml  qwen2.5-7b.yaml
res/hparams/ROME/: baichuan-7b.yaml  chatglm2-6b.yaml  chatglm4-9b.yaml  gpt-j-6B.yaml  gpt2-xl.yaml  internlm-7b.yaml  llama-7b.yaml  llama3-8b.yaml  llama3.2-3b.yaml  mistral-7b.yaml  qwen-7b.yaml  qwen2-7b.yaml  qwen2.5-7b.yaml
results/: AlphaEdit_1.json  AlphaEdit_1000-gptq2.json  AlphaEdit_1000-gptq3.json  AlphaEdit_20-gptq8.json  AlphaEdit_20.json  AlphaEdit_500-gptq3.json  AlphaEdit_500-gptq4.json  EMMET_1000.json  Llama-3.2-3B_EMMET_500-gptq2.json  Llama-3.2-3B_EMMET_500-gptq3.json  Llama-3.2-3B_EMMET_500-gptq4.json  Llama-3.2-3B_EMMET_500-gptq8.json  Llama-3.2-3B_EMMET_500.json  Llama-3.2-3B_MEMIT_500-gptq2.json  Llama-3.2-3B_MEMIT_500-gptq3.json  Llama-3.2-3B_MEMIT_500-gptq4.json  Llama-3.2-3B_MEMIT_500-gptq8.json  Llama-3.2-3B_MEMIT_500.json  MEMIT_1000-gptq2.json  MEMIT_1000-gptq3.json  MEMIT_1000-gptq4.json  MEMIT_1000.json  Mistral-7B-v0.1_MEMIT_500-gptq2.json  Mistral-7B-v0.1_MEMIT_500-gptq3.json  Mistral-7B-v0.1_MEMIT_500-gptq4.json  Mistral-7B-v0.1_MEMIT_500-gptq8.json  Mistral-7B-v0.1_MEMIT_500.json  Qwen2-7B_MEMIT_500-gptq2.json  Qwen2-7B_MEMIT_500-gptq3.json  Qwen2-7B_MEMIT_500-gptq4.json  Qwen2-7B_MEMIT_500-gptq8.json  Qwen2-7B_MEMIT_500.json  Qwen2.5-7B-Instruct_AlphaEdit_500-gptq2.json  Qwen2.5-7B-Instruct_AlphaEdit_500-gptq3.json  Qwen2.5-7B-Instruct_AlphaEdit_500-gptq4.json  Qwen2.5-7B-Instruct_AlphaEdit_500-gptq8.json  Qwen2.5-7B-Instruct_AlphaEdit_500.json  Qwen2.5-7B_MEMIT_500-gptq2.json  Qwen2.5-7B_MEMIT_500-gptq3.json  Qwen2.5-7B_MEMIT_500-gptq4.json  (+51 more)
scripts/: quant_rome_eval.sh  rome_eval_quant_eval.sh  run_all.sh  run_model.sh
scripts/AlphaEdit/: gpt-j-6B.sh  llama3-8b.sh  llama3.1-8b.sh  qwen2.5-7b.sh
scripts/EMMET/: gpt-j-6B.sh  llama-7b.sh  llama3.2-3b.sh
scripts/MEMIT/: baichuan-7b.sh  chatglm2-6b.sh  gpt-j-6B.sh  internlm-7b.sh  llama-7b.sh  llama3.2-3b.sh  mistral-7b.sh  qwen-7b.sh  qwen2-7b.sh  qwen2.5-7b.sh
