[project]
name = "bza-tool"
version = "0.1.0"
description = "Benchmark how quantization affects retention of ROME-implanted facts in LLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets",
    "accelerate",
    "auto-gptq",
    "llmcompressor",
    "pyyaml",
    "tqdm",
    # EasyEdit transitive deps (vendored, so we must declare them)
    "higher",
    "einops",
    "gpustat",
    "hydra-core",
    "importlib-metadata",
    "matplotlib",
    "nltk",
    "numpy",
    "omegaconf",
    "pandas",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "tokenizers",
    "openai",
    "peft",
    "timm",
    "iopath",
    "opencv-python",
    "fairscale",
    "av",
    "qwen_vl_utils",
    "zhipuai",
    "sentencepiece",
    "pyarrow",
    "rouge",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
