[project]
name = "bza-tool"
version = "0.1.0"
description = "Benchmark how quantization affects retention of ROME-implanted facts in LLMs"
requires-python = "==3.11.15"
dependencies = [
  "torch==2.9.1",
  "torchvision",
  "pytorch-triton-rocm",
  "transformers==4.57.1",
  "datasets",
  "accelerate",
  "gptqmodel>=5.0.0",
  "PyYAML==6.0",
  "tqdm",
  "setuptools_scm",
  "einops==0.8.1",
  "gpustat==1.1",
  "hydra-core==1.3.2",
  "higher==0.2.1",
  "importlib-metadata==8.7.0",
  "matplotlib==3.10.7",
  "nltk==3.6.5",
  "numpy==2.2.6",
  "omegaconf==2.3.0",
  "pandas==2.3.3",
  "scikit-learn==1.7.2",
  "scipy==1.15.3",
  "sentence-transformers==3.2.1",
  "tokenizers==0.22.1",
  "openai==2.8.1",
  "peft==0.18.0",
  "timm==1.0.22",
  "iopath==0.1.10",
  "opencv-python==4.12.0.88",
  "fairscale==0.4.13",
  "av==14.2.0",
  "qwen_vl_utils==0.0.10",
  "zhipuai==2.1.5.20250415",
  "sentencepiece==0.2.0",
  "pyarrow",
  "rouge==1.0.1",
  "logbar>=0.2.2",
  "tokenicer>=0.0.8",
  "device-smi>=0.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
# ROCm6 support relies on `pytorch-triton-rocm`, which should also be installed from the PyTorch index
# (and included in `project.dependencies`).
pytorch-triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
